Visual formatting , changd colors added interactive background and fixed more alignment issues

--- a/style/horzontaltimeline.css
+++ b/style/horzontaltimeline.css
@@ -17,9 +17,7 @@ h2 {
 /* -------------------------------------
  * Timeline
  * ------------------------------------- */
- .title{
-  text-align: center;
-}
+
  .timeline {
   font-size: 20px;
  }
@@ -27,10 +25,11 @@ h2 {
  
 #timeline {
   list-style: none;
-  margin: 120px 0 0;
+  margin: 70px 0 0;
   padding: 0;
-  border-top: 8px solid #eedcdc;
-  color:#454150;
+  border-top: 8px solid #790101;
+  border-width: 5px;
+  color:#d6cccc00;
   display: table;
   border-spacing: 30px 0; }
   #timeline li {
@@ -48,7 +47,7 @@ h2 {
   font-size: 0.95em;
   line-height: 20px;
   position: absolute;
-  color:rgb(255, 255, 255); }
+  color:rgb(58, 27, 27); }
 
 .circle {
   margin: 0 auto;
@@ -57,7 +56,7 @@ h2 {
   right: 0;
   width: 10px;
   height: 10px;
-  background: #454150;
+  background: #d6cccc67;
   border: 5px solid #ffffff;
   border-radius: 50%;
   display: block;
@@ -65,7 +64,7 @@ h2 {
 
  #future{
   background:red;
-  border:5px solid rgb(85, 7, 7);
+  border:5px solid rgb(255, 255, 255);
  }
 .content {
   width: 200px;
@@ -116,7 +115,7 @@ label {
   display: block;
   top: 60px;
   left: 15px;
-  color:azure; }
+  color:rgb(0, 0, 0); }
 
 .radio {
   display: none; }
@@ -127,11 +126,11 @@ label {
      }
   .radio:checked ~ .content {
     max-height: 180px;
-    border-color: #ffffff;
+    border-color: #703939;
     width: 400px; }
     .radio:checked ~ .content p {
       max-height: 200px;
-      color: #ffffff;
+      color: #000000;
       transition: color 0.3s linear 0.3s; }
 
 .location{
